<resources>
    <string name="app_name">比特壹百</string>

    <!--menu action title-->
    <string name="action_settings">设置</string>
    <string name="action_change_skin">更换背景</string>
    <string name="action_search">搜索</string>
    <string name="action_gift">隐藏任务</string>
    <string name="action_share_app">分享应用</string>
    <string name="action_share">分享</string>
    <string name="action_download_image">保存图片</string>

    <!--activity name-->
    <string name="activity_login">登录</string>
    <string name="activity_forgotPwd">忘记密码</string>
    <string name="activity_register">注册</string>
    <string name="activity_forgotPwd_next">找回密码</string>

    <!--any error alert text-->
    <string name="error_account_null">账号不能为空</string>
    <string name="error_account_error">账号错误</string>
    <string name="error_password_null">密码不能为空</string>
    <string name="error_password_error">密码错误</string>
    <string name="error_password_length_error">密码不能少于6位</string>
    <string name="error_password_confirm_error">两次密码不匹配</string>
    <string name="error_code_null">验证码不能为空</string>
    <string name="error_code_error">验证码错误</string>
    <string name="error_feedback_null">反馈内容不能为空哦～</string>

    <string name="str_loading_data">正在加载中…</string>

    <string name="test_str">如果你不能用一句话描述问题，说明你对他还不够了解</string>
    <string-array name="tags">
        <item>Android</item>
        <item>Android Studio</item>
        <item>Bug</item>
        <item>Canvas</item>
        <item>CET4</item>
        <item>CET6</item>
        <item>English</item>
        <item>File Template</item>
        <item>IntelliJ</item>
        <item>Live Template</item>
        <item>Music</item>
        <item>MVC</item>
        <item>MVP</item>
        <item>SEO</item>
        <item>WordPress</item>
        <item>代码性能优化</item>
        <item>优化</item>
        <item>作者</item>
        <item>动画</item>
        <item>吉他</item>
        <item>微表情心理学</item>
        <item>心理学</item>
        <item>文章</item>
        <item>杂货铺</item>
        <item>热修复</item>
        <item>百度指数</item>
        <item>百度权重</item>
        <item>裁剪图片</item>
        <item>问题集</item>
    </string-array>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>

    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>

    <string name="share_application">推荐给大家一款很好的博客应用【比特壹佰】,简单即美好!\n下载请戳这里：http://www.bit100.com/.zhongzilu/mood/version/RainbowMood.apk</string>
    <string name="toast_no_more">没有更多了</string>
    <string name="toast_can_not_deal">不存在处理的应用</string>
    <string name="title_chooser">选择方式</string>
    <string name="title_chooser_share">选择分享</string>
    <string name="toast_can_not_deal_download_intent">请安装浏览器或下载软件</string>
    <string name="toast_invoking_share">正在启动分享</string>
    <string name="label_gallery_activity">图片浏览</string>
    <string name="toast_image_saved">图片保存于：</string>
    <string name="hint_account">请输入账号</string>
    <string name="hint_password">请输入密码</string>
    <string name="login_text">登录</string>
    <string name="label_article_list_activity">文章列表页</string>
    <string name="error_network_failed">网络繁忙，请稍后再试~~</string>
    <string name="action_copy_content">复制文字</string>
    <string name="action_capture">生成图片</string>
    <string name="label_setting_activity">设置</string>
    <string name="label_about_me_activity">关于我</string>
    <string name="label_feedback_activity">意见反馈</string>
    <string name="action_refresh_title">刷新</string>
    <string name="remember_pwd_text">记住密码?</string>
    <string name="forgot_pwd_text">忘记密码?</string>
    <string name="label_forgot_activity">忘记密码</string>
    <string name="action_feedback_title">发送</string>

</resources>
