<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.opengl.GLSurfaceView
        android:id="@+id/gl_surface_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <ImageView
        android:id="@+id/img_logo_white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:src="@drawable/ic_logo_white" />

    <EditText
        android:id="@+id/et_login_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/img_logo_white"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginTop="50dp"
        android:hint="@string/hint_account"
        android:textSize="18sp"
        android:lines="1"
        android:fontFamily="sans-serif"
        android:textColor="#eee"
        android:textColorHint="#aaa" />

    <EditText
        android:id="@+id/et_login_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_login_account"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginTop="20dp"
        android:hint="@string/hint_password"
        android:inputType="textPassword"
        android:lines="1"
        android:textColor="#eee"
        android:textColorHint="#aaa" />

    <CheckBox
        android:id="@+id/cb_remember_pwd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_login_password"
        android:layout_marginLeft="50dp"
        android:layout_marginStart="50dp"
        android:text="@string/remember_pwd_text"
        android:textColor="#aaa" />

    <TextView
        android:id="@+id/tv_forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/cb_remember_pwd"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@id/et_login_password"
        android:layout_marginEnd="50dp"
        android:layout_marginRight="50dp"
        android:text="@string/forgot_pwd_text"
        android:textColor="#aaa" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_forgot_password"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/bg_login_button"
        android:text="@string/login_text"
        android:textColor="#eee" />

</RelativeLayout>